--- a/src/styles/antd/input.scss
+++ b/src/styles/antd/input.scss
@@ -12,3 +12,11 @@
   border-color: var(--primary-main);
   box-shadow: none;
 }
+
+.ant-input:-webkit-autofill,
+.ant-input:-webkit-autofill:hover,
+.ant-input:-webkit-autofill:focus,
+.ant-input:-webkit-autofill:active {
+  box-shadow: 0 0 0 30px white inset !important;
+  -webkit-box-shadow: 0 0 0 30px white inset !important;
+}
